# opengl-project-temp

./: .clang-format  CMakeLists.txt
.cache/clangd/index/: App.cpp.59FAFC80D47B1B21.idx  App.hpp.B32CEE9CFC34C6E4.idx  Graphics.cpp.DFF474812AB12B96.idx  Graphics.hpp.28378538D9BEAD16.idx  Logger.hpp.70C56DAA365A9C5E.idx  Math.cpp.BA14DD76B7783B91.idx  Math.hpp.B6D34287B9EAEE2A.idx  ProjectLoader.cpp.A2E8E6396A27BD4A.idx  ProjectLoader.hpp.066F26E8EC1AF40F.idx  glad.c.94EA7A866D5039D9.idx  glad.h.DB66566D58C6251E.idx  khrplatform.h.BBA3CF37B44B1208.idx  main.cpp.C7D9A0CCA3C99E59.idx
include/: App.hpp  Graphics.hpp  Logger.hpp  Math.hpp  ProjectLoader.hpp
res/: model.myobj
res/shaders/: fragment.glsl  vertex.glsl
src/: App.cpp  Graphics.cpp  Math.cpp  ProjectLoader.cpp  main.cpp
